--- a/package.json
+++ b/package.json
@@ -50,11 +50,13 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-pdf/renderer": "^3.4.4",
     "@tanstack/react-table": "^8.16.0",
+    "base64-arraybuffer": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
+    "file-saver": "^2.0.5",
     "firebase": "^10.11.1",
     "geist": "^1.3.0",
     "html2canvas": "^1.4.1",
@@ -64,6 +66,7 @@
     "next": "14.2.2",
     "next-intl": "^3.12.2",
     "next-themes": "^0.3.0",
+    "pdf-lib": "^1.17.1",
     "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.3",
     "react": "^18",
