--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "next-intl": "^3.12.2",
     "next-themes": "^0.3.0",
     "pdf-lib": "^1.17.1",
+    "pdf-to-img": "^4.0.0",
     "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.3",
     "react": "^18",
